area sobre da pagina modificada

--- a/projeto02/index.html
+++ b/projeto02/index.html
@@ -52,7 +52,7 @@
 
       h2 {
         font-size: 24px;
-        text-transform: uppercase;
+        text-transform: none;
         color: #303030;
         font-weight: 600;
         margin-bottom: 30px;
@@ -524,7 +524,7 @@
         <ul class="nav navbar-nav navbar-left">
           <li>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
           </li>
-          <li><a href="#about">ABOUT</a></li>
+          <li><a href="#about">SOBRE</a></li>
           <li><a href="#services">SERVICES</a></li>
           <li><a href="#portfolio">PORTFOLIO</a></li>
           <li><a href="#pricing">PRICING</a></li>
@@ -547,34 +547,61 @@
   </div>
   <div class="row col-sm-12"><br/><br/>
     <hr class="H" />
+    <br/>
   </div>
   <!-- Container (About Section) -->
   <div id="about" class="container-fluid">
     <div class="row">
       <div class="col-sm-1"></div>
       <div class="col-sm-2">
-        <h2>About Company Page</h2><br><span class="glyphicon glyphicon-signal logo"></span>
+        <h2 style="margin-bottom:-20px; padding-bottom:-20px;">Sobre</h2><br>
+        <img src="imagens/sobre.png" style="position:relative; top:-45px; left:80px; padding-bottom:-20px; margin-bottom:-20px;">
         <p>O Site da Soldagem é um espaço desti&shy;nado à demo&shy;cra&shy;tiza&shy;ção dos conhe&shy;ci&shy;men&shy;tos rela&shy;cio&shy;nados a solda&shy;gem e áreas afins.<br/><b>Missão:</b><br/>Estimular perma&shy;nente&shy;men&shy;te o desen&shy;volvi&shy;mento e a dis&shy;cus&shy;são dos conhe&shy;ci&shy;men&shy;tos téc&shy;nico-cien&shy;tí&shy;ficos como forma
           de socia&shy;lizar infor&shy;ma&shy;ções conso&shy;lida&shy;das na área da soldagem.<br/><b>Visão:</b><br/>Ser um ins&shy;tru&shy;mento de socia&shy;lização e conso&shy;lidação dos conheci&shy;mentos relacio&shy;nados a soldagem.</p><br><button class="btn btn-default btn-lg">Get in Touch</button></div><br/>
       <div class="col-sm-6 V">
-        <h2>Our Values</h2><br><span class="glyphicon glyphicon-globe logo slideanim"></span>
-        <h4><strong>MISSION:</strong>Our mission lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-          ex ea commodo consequat.</h4><br>
-        <p><strong>VISION:</strong>Our vision Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-          ea commodo consequat. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-          consequat. </p>
+        <h2 style="margin-bottom:-55px; padding-bottom:-55px;">Notícias</h2><br>
+         <img src="imagens/noticias.png" style="position:relative; top:-15px; left:100px; padding-bottom:-20px; margin-bottom:-20px; width:70px;">
+        <img src="imagens/previsao-industria-2018.jpeg" style="width:300px; position:relative; top:0; left:200px; padding-bottom:-330px; margin-bottom:-330px;"/>
+        <h2>CNI aponta 7<br/> previsões da<br/> indústria para a<br/> economia brasileira<br/> em 2018</h2>
+        <p>Fonte: Portal da Indústria<br/>
+          Postada em: 05/01/18</p><br/><br/>
+       <p>De acordo com o Informe Conjuntural da Confederação Nacional da Indústria (CNI),
+         depois de quatro anos de queda, os investimentos voltarão a crescer em 2018.
+         As empresas também devem contratar mais do que em 2017. Neste ano,
+         a economia brasileira consolidará a trajetória de crescimento iniciada em 2017.
+         A indústria crescerá 3% e as empresas aumentarão a oferta de vagas para os trabalhadores.
+         As previsões estão na edição especial do Informe Conjuntural da Confederação Nacional da Indústria (CNI).<br/>
+<br/>
+Conheça as previsões da CNI para o desempenho de sete indicadores econômicos neste ano:<br/>
+i) Economia crescerá 2,6%<br/>
+ii) Indústria terá expansão de 3%<br/>
+iii) Investimentos aumentarão 4%<p/>
       </div>
       <div class="col-sm-2 V">
-        <h2>vazio</h2>
-        <h4><strong>MISSION:</strong>Our mission lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-          ex ea commodo consequat.</h4><br>
-        <p><strong>VISION:</strong>Our vision Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-          ea commodo consequat. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-          consequat. </p>
+        <h2 style="font-size:14pt; padding-bottom:-30px; margin-bottom:-30px;">Vagas e<br/> oportunidades</h2>
+        <img src="imagens/trabalho1.png" style="width:65px; position:relative; top:-40px; left:112px; padding-bottom:-50px; margin-bottom:-50px;"/>
+        <h2 style="font-size:14pt">Especialista em Soldagem</h2>
+        <p>Local: Passo Fundo (RS)<br/>
+Número de vagas: 01<br/>
+Recrutante: Action Con&shy;sul&shy;to&shy;ria e Desenvolvimento <br/>
+Requisitos / características:<br/>
+- Atuara nas análises de viabilidade do produto com relação aos processos de soldagem;<br/>
+- Planejar e efetuar as definições de tecnologias e equipamentos a serem utilizados;<br/>
+- Ações de suporte técnico para en&shy;ge&shy;nha&shy;ria de fa&shy;bri&shy;ca&shy;ção;<br/>
+- Possuir Graduação em Engenharia Me&shy;câ&shy;ni&shy;ca (obri&shy;ga&shy;tó&shy;rio);<br/>
+- Ter conhecimento e experiência com&shy;pro&shy;va&shy;da em pro&shy;ces&shy;sos de soldagem;<br/>
+- Ter atuado com gestão de equipe, melhoria contínua de processos;<br/>
+- Outros.</p>
       </div>
       <div class="col-sm-1"></div>
     </div>
   </div>
+  <br/>
+  <br/>
+  <br/>
+  <br/>
+  <br/>
+  <br/>
   <div class="container-fluid bg-grey">
     <div class="row">
       <h2>vazio</h2>
