area conceito modificada

--- a/projeto02/index.html
+++ b/projeto02/index.html
@@ -421,15 +421,15 @@
       .tfclear {
         clear: both;
       }
-
+     /*slide01*/
       div#slide01 img#id {
         position: absolute;
         margin-top: 40px;
         margin-bottom: 110px;
         padding-top: 10px;
         padding-bottom: 110px;
-        margin-left: -25px;
-        padding-left: -25px;
+        margin-left: -20px;
+        padding-left: auto;
       }
 
       .redessociais {
@@ -540,23 +540,20 @@ padding-top: 85px;
           </li>
           <li><a href="#about">SOBRE</a></li>
           <li><a href="#services">CONCEITO BÁSICO</a></li>
-          <li><a href="#portfolio">PORTFOLIO</a></li>
-          <li><a href="#pricing">PRICING</a></li>
-          <li><a href="#contact">CONTACT</a></li>
         </ul>
         <ul class="redes01 redessociais redessociais-right">
-          <li><a href="" style="position: absolute; left: -20px; top: 0px"><img src="imagens/face.png" width="30" /></a></li>
-          <li><a href="" style="position: absolute; left: -60px; top: 0px"><img src="imagens/in.png" width="30" /></a></li>
-          <li><a href="" style="position: absolute; left: -100px; top: 0px"><img src="imagens/t.png" width="30" /></a></li>
-          <li><a href="" style="position: absolute; left: -140px; top: 0px"><img src="imagens/youtube.png" width="30" /></a></li>
+          <li><a href="" style="position: absolute; left: -20px; top: 0px"><img src="imagens/face.png" width="30" title="FACEBOOK"/></a></li>
+          <li><a href="" style="position: absolute; left: -60px; top: 0px"><img src="imagens/in.png" width="30" title="LINKEDIN"/></a></li>
+          <li><a href="" style="position: absolute; left: -100px; top: 0px"><img src="imagens/t.png" width="30" title="TWITTER"/></a></li>
+          <li><a href="" style="position: absolute; left: -140px; top: 0px"><img src="imagens/youtube.png" width="30" title="YOUTUBE"/></a></li>
         </ul>
       </div>
     </div>
   </nav>
-  <div class="jumbotron"><img class="imagem-cabecalho" src="imagens/ls.jpg" /><iframe class="relogio" src="https://freesecure.timeanddate.com/clock/i66bpyac/n430/tlbr5/ftb/tt0/tw0" frameborder="0" width="230" height="18"></iframe>
-    <div id="tfheader">
+  <div style="width: 100%" class="jumbotron"><img class="imagem-cabecalho" src="imagens/ls.jpg" /><iframe class="relogio" src="https://freesecure.timeanddate.com/clock/i66bpyac/n430/tlbr5/ftb/tt0/tw0" frameborder="0" width="230" height="18"></iframe>
+    <div style="width: 100%" id="tfheader">
       <form id="tfnewsearch" method="get" action="http://www.google.com"><input type="text" id="tfq" class="tftextinput2" name="q" size="21" maxlength="120" value="Search our website"><input type="submit" value=">" class="tfbutton2"></form>
-      <div id="slide01" class="tfclear"><img id="id" width="1349" height="390"></div>
+      <div id="slide01" class="tfclear" style="width: 200%"><img id="id" height="390" style='width: 103%'></div>
     </div>
   </div>
   <div class="row col-sm-12"><br/><br/>
@@ -652,6 +649,42 @@ Requisitos / características:<br/>
           <div class="V espaco">
           <iframe class="box0" src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2FoSiteDaSoldagem%2Fvideos%2F1179839772146875%2F&width=430&show_text=false&height=241&appId" width="430" height="241" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allowFullScreen="true"></iframe>
           <img src="imagens/videosimg.png" style="position:relative; top:-305px; left:5px;"/>
+   
+            <p><h2 style="margin-bottom:-30px; padding-bottom:-30px;">Instituições de Ensino na área da soldagem</h2><br/>
+   Apresentação da informação:<br/><br/>
+   Instituição (Departamento que oferta) - Modalidades de Ensino ofertada (Técnico, Graduação ou Pós-Graduação)<br/>
+
+- UFSC (Departamento de Engenharia Mecânica) - Mestrado / Doutorado<br/>
+- UFMG (Departamento de Engenharia Metalúrgica e de Materiais / Departamento de Engenharia Mecânica) - Mestrado / Doutorado<br/>
+- UFPR (Departamento de Engenharia Mecânica) - Especialização / Mestrado / Doutorado<br/>
+- UNB (Departamento de Engenharia Mecânica) - Mestrado / Doutorado<br/>
+- UFU (Departamento de Engenharia Mecânica) - Especialização / Mestrado / Doutorado<br/>
+- UFPA (Departamento de Engenharia Mecânica) - Mestrado<br/>
+- UFC (Departamento Engenharia Metalúrgica e de Materiais) - Mestrado / Doutorado<br/>
+- Faculdade de Tecnologia SENAI CIMATEC - Especialização / Mestrado<br/>
+- Faculdade de Tecnologia SENAI Nadir Dias de Figueiredo - Especialização<br/>
+- UFRGS (Departamento de Engenhria de Minas, Metalúrgica e de Materiais) - Mestrado / Doutorado<br/>
+- UFCG (Departamento de Engenharia Mecânica) - Mestrado<br/>
+- UFRN (Departamento de Engenharia de Materiais - PPGCEM) - Mestrado / Doutorado<br/>
+- Universidade Federal Fluminense (UFF) - Especialização<br/>
+- PUC/RJ (Departamento de Ciência dos Materiais e Metalurgia) - Especialização / Mestrado / Doutorado<br/>
+- USP - Especialização / Mestrado / Doutorado<br/>
+- UNITAU - Especialização<br/>
+- UNIMEP - Especialização<br/>
+- UNILESTE - Especialização<br/>
+- Faculdade SENAI Rio - Especialização<br/>
+- Instituto Mauá de Tecnologia - Especialização<br/>
+- UPE - Especialização<br/>
+- Faculdade do Centro Leste (UCL) - Especialização<br/>
+- Universidade Católica de Petrópolis (UCP) - Especialização<br/>
+- Instituto Superior Tupy (IST) - Especialização<br/>
+- UNESP BAURU - Mestrado<br/>
+- Fundação Santo André (FSA) - Especialização<br/>
+- Fatec Itaquera - Curso Superior de Tecnologia em "Mecânica: Processo de Soldagem"<br/>
+  Caso a sua Instituição de Ensino não conste na relação,
+  favor encaminhar uma mensagem, via formulário do FALE CONOSCO
+  (rodapé da página), ao Site da Soldagem para que possamos atualizar a relação.</p>
+ 
           </div>
       </div>
       <div class="col-sm-1"></div>
@@ -663,129 +696,39 @@ Requisitos / características:<br/>
   <br/>
   <br/>
   <br/>
-  <!-- Container (Portfolio Section) -->
-  <div id="portfolio" class="container-fluid text-center bg-grey">
-    <h2>Portfolio</h2><br>
-    <h4>What we have created</h4>
-    <div class="row text-center slideanim">
-      <div class="col-sm-4">
-        <div class="thumbnail"><img src="paris.jpg" alt="Paris" width="400" height="300">
-          <p><strong>Paris</strong></p>
-          <p>Yes, we built Paris</p>
-        </div>
-      </div>
-      <div class="col-sm-4">
-        <div class="thumbnail"><img src="newyork.jpg" alt="New York" width="400" height="300">
-          <p><strong>New York</strong></p>
-          <p>We built New York</p>
-        </div>
-      </div>
-      <div class="col-sm-4">
-        <div class="thumbnail"><img src="sanfran.jpg" alt="San Francisco" width="400" height="300">
-          <p><strong>San Francisco</strong></p>
-          <p>Yes, San Fran is ours</p>
-        </div>
-      </div>
-    </div><br>
-    <h2>What our customers say</h2>
-    <div id="myCarousel" class="carousel slide text-center" data-ride="carousel">
-      <!-- Indicators -->
-      <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
-        <li data-target="#myCarousel" data-slide-to="2"></li>
-      </ol>
-      <!-- Wrapper for slides -->
-      <div class="carousel-inner" role="listbox">
-        <div class="item active">
-          <h4>"This company is the best. I am so happy with the result!"<br><span>Michael Roe,
-Vice President,
-Comment Box</span></h4>
-        </div>
-        <div class="item">
-          <h4>"One word... WOW!!"<br><span>John Doe,
-Salesman,
-Rep Inc</span></h4>
-        </div>
-        <div class="item">
-          <h4>"Could I... BE any more happy with this company?"<br><span>Chandler Bing,
-Actor,
-FriendsAlot</span></h4>
-        </div>
-      </div>
-      <!-- Left and right controls --><a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev"><span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span><span class="sr-only">Previous</span></a><a class="right carousel-control" href="#myCarousel"
-        role="button" data-slide="next"><span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span><span class="sr-only">Next</span></a></div>
-  </div>
-  <!-- Container (Pricing Section) -->
-  <div id="pricing" class="container-fluid">
-    <div class="text-center">
-      <h2>Pricing</h2>
-      <h4>Choose a payment plan that works for you</h4>
-    </div>
-    <div class="row slideanim">
-      <div class="col-sm-4 col-xs-12">
-        <div class="panel panel-default text-center">
-          <div class="panel-heading">
-            <h1>Basic</h1>
-          </div>
-          <div class="panel-body">
-            <p><strong>20</strong>Lorem</p>
-            <p><strong>15</strong>Ipsum</p>
-            <p><strong>5</strong>Dolor</p>
-            <p><strong>2</strong>Sit</p>
-            <p><strong>Endless</strong>Amet</p>
-          </div>
-          <div class="panel-footer">
-            <h3>$19</h3>
-            <h4>per month</h4><button class="btn btn-lg">Sign Up</button></div>
-        </div>
-      </div>
-      <div class="col-sm-4 col-xs-12">
-        <div class="panel panel-default text-center">
-          <div class="panel-heading">
-            <h1>Pro</h1>
-          </div>
-          <div class="panel-body">
-            <p><strong>50</strong>Lorem</p>
-            <p><strong>25</strong>Ipsum</p>
-            <p><strong>10</strong>Dolor</p>
-            <p><strong>5</strong>Sit</p>
-            <p><strong>Endless</strong>Amet</p>
-          </div>
-          <div class="panel-footer">
-            <h3>$29</h3>
-            <h4>per month</h4><button class="btn btn-lg">Sign Up</button></div>
-        </div>
-      </div>
-      <div class="col-sm-4 col-xs-12">
-        <div class="panel panel-default text-center">
-          <div class="panel-heading">
-            <h1>Premium</h1>
-          </div>
-          <div class="panel-body">
-            <p><strong>100</strong>Lorem</p>
-            <p><strong>50</strong>Ipsum</p>
-            <p><strong>25</strong>Dolor</p>
-            <p><strong>10</strong>Sit</p>
-            <p><strong>Endless</strong>Amet</p>
-          </div>
-          <div class="panel-footer">
-            <h3>$49</h3>
-            <h4>per month</h4><button class="btn btn-lg">Sign Up</button></div>
-        </div>
-      </div>
-    </div>
-  </div>
+  <br/>
+  <br/>
+  <br/>
+  <br/>
+  <br/>
+  <br/>
+  <br/>
+  <br/>
+  <br/>
+  <br/>
+  <br/>
+  <br/>
+  <br/>
+  <br/>
+  <br/>
+  <br/>
+  <br/>
+  <br/>
+  <br/>
+  <br/>
+ 
   <!-- Container (Contact Section) -->
   <div id="contact" class="container-fluid bg-grey">
     <h2 class="text-center">CONTACT</h2>
     <div class="row">
       <div class="col-sm-5">
         <p>Contact us and we'll get back to you within 24 hours.</p>
-        <p><span class="glyphicon glyphicon-map-marker"></span>Chicago, US
-        </p>
-        <p><span class="glyphicon glyphicon-phone"></span>+00 1515151515</p>
-        <p><span class="glyphicon glyphicon-envelope"></span>myemail@something.com</p>
+        <p><span class="glyphicon glyphicon-map-marker"></span></p> 
+
+        <p><span class="glyphicon glyphicon-phone"></span></p>  
+ 
+        <p><span class="glyphicon glyphicon-envelope"></span></p> 
+
       </div>
       <div class="col-sm-7 slideanim">
         <div class="row">
@@ -798,29 +741,7 @@ FriendsAlot</span></h4>
       </div>
     </div>
   </div>
-  <!-- Add Google Maps -->
-  <div id="googleMap" style="height:400px;width:100%;"></div>
-  <script>
-    function myMap() {
-      var myCenter = new google.maps.LatLng(41.878114, -87.629798);
-      var mapProp = {
-        center: myCenter,
-        zoom: 12,
-        scrollwheel: false,
-        draggable: false,
-        mapTypeId: google.maps.MapTypeId.ROADMAP
-      };
-      var map = new google.maps.Map(document.getElementById("googleMap"), mapProp);
-      var marker = new google.maps.Marker({
-        position: myCenter
-      });
-      marker.setMap(map);
-    }
-  </script>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBu-916DdpKAjTmJNIgngS6HL_kDIKU0aU&callback=myMap"></script>
-  <!-- To use this code on your website,
-get a free API key from Google. Read more at: https: //www.w3schools.com/graphics/google_maps_basic.asp
--->
+  
   <footer class="container-fluid text-center"><a href="#myPage" title="To Top"><span class="glyphicon glyphicon-chevron-up"></span></a>
     <p>Bootstrap Theme Made By <a href="https://www.w3schools.com" title="Visit w3schools">www.w3schools.com</a></p>
   </footer>
