--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 			<p style="background-color:MediumSeaGreen;">Contato.</p>
 			<a id="ff" href="contato.html">Clique aqui para ir a página</a>
 			<p style="background-color:Gray;">Links.</p>
-			<a id="gg" href="links.html">Clique aqui para ir a página</a><br>
+			<a id="gg" href="links.html">Clique aqui para ir à páginas amigas.</a><br>
       <a id="gg" href="html/index.html">Trabalho de Manipulação de Poligonos - C++</a><br>
 			<img id="glass5" src="imagens/glass5.gif" width="35" alt="Z zz..." title="Z zz..." />
 			<br/>
